...
import Foundation

enum TestIDs {
    enum ContentView {
        static let noContentID = "ContentView.view.nocontent"
        static let editButtonID = "ContentView.button.edit"
        static let addButtonID = "ContentView.button.add"
        static let versionStringID = "ContentView.statictext.version"

        static func vehicleButtonID(_ name: String) -> String {
            "ContentView.button.vehicle \(name)"
        }
    }
...
        static let titleID = "FuelingEditView.staticText.edit"
        static let nameID = "FuelingEditView.staticText.name"
        static let costID = "FuelingEditView.textField.cost"
        static let gallonsID = "FuelingEditView.textField.gallons"
        static let odometerID = "FuelingEditView.textField.odometer"
        static let cancelButtonID = "FuelingEditView.button.cancel"
        static let updateButtonID = "FuelingEditView.button.update"
    }
    enum AddVehicleView {
        static let vehicleNameID = "AddVehicleView.textField.vehicleName"
        static let odometerID = "AddVehicleView.textField.odometer"
        static let cancelButtonID = "AddVehicleView.button.cancel"
        static let addButtonID = "AddVehicleView.button.add"
...
