...
                            .presentationDetents([.medium])
                    }
                }
            }
            .padding()
        }
        .navigationTitle("Vehicle Fuel Use")
        .toolbar {
            ToolbarItem {
                Button {
                    addFuelPresented.toggle()
                } label: {
                    Label("Add fuel", systemImage: "plus")
...
